# recipenator

./: README.md
recipenator-backend/: .gitignore  Cargo.toml
recipenator-backend/migrations/2023-07-26-082019_create_recipe/: down.sql  up.sql
recipenator-backend/src/: args.rs  lib.rs  main.rs  models.rs  schema.rs
recipenator-backend/src/api/: config.rs  ingredients.rs  meal_schedule.rs  mod.rs  pantry.rs  pantry_ingredients.rs  recipe.rs
recipenator-backend/src/db/: connection.rs  ingredient.rs  meal_scheduler.rs  mod.rs  pantry_ingredient.rs  recipes.rs
recipenator-backend/src/models/: mod.rs  models.rs  recipe.rs  recipe_json.rs  response.rs
recipenator-backend/src/ops/: mod.rs  recipe_ops.rs
recipenator-backend/src/reqwests/: edamam.rs
recipenator-backend/src/reqwests_calls/: edamam.rs  mod.rs
recipenator-front-end/: .env  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
recipenator-front-end/@/components/ui/: dialog.tsx
recipenator-front-end/src/: App.tsx  input.css  main.tsx
recipenator-front-end/src/components/: AddIngredientForm.tsx  CreateRecipe.tsx  EditIngredientForm.tsx  Home.tsx  ListRecipes.tsx  PantryList.tsx  RecipeFind.tsx  UpdateRecipe.tsx  components.css
recipenator-front-end/src/components/MealScheduling/: MealSchedule1.tsx  MealScheduleStep2.tsx
recipenator-front-end/src/services/: Ingredients.tsx  PantryIngredient.tsx  Recipes.tsx  edamamLists.tsx
recipenator-front-end/src/types/: interfaces.ts
